nada mas otro formulario

--- a/WindowsFormsApp1/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -59,6 +59,12 @@
     <Compile Include="frmExtraditarCubano.Designer.cs">
       <DependentUpon>frmExtraditarCubano.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNadaMasOtroFormulario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNadaMasOtroFormulario.Designer.cs">
+      <DependentUpon>frmNadaMasOtroFormulario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
